public/css/styles.css
****** Change Box Model **************
*,
*:before,
*:after {
  box-sizing: border-box;
}

.lora-normal {
  font-family: "Lora", serif;
  font-weight: 600;
  font-style: normal;
}
.outfit-normal {
  font-family: "Outfit", sans-serif;
  font-weight: 400;
  font-style: normal;
}
:root {
  --primary-color: #2a0209;
  --secondary-color: #ffffff;
}
body {
  margin: 1%
}
main {
  margin: 2%;
}
header {
  padding: 1%;
}
nav ul{
  display: flex;
}
nav a {
  color: white;
  text-decoration: none;
}
 h1{
  margin: 3% 1%;
}
 #tools a {
  text-decoration: none;
  color: black;
}
#tools {
  position: absolute;
  top: 1%;
  right: 1%;
}
nav {
  background-color: black;
  padding: 2% ;
}
nav ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
}
nav ul {
  list-style-type: none;
}
nav ul li {
  color: white;
}
.welcome-1 {
  display: flex;
  position: relative;
}
.welcome-2 {
  display: flex;
  flex-direction: column;
  width: 33%;
  background-color: rgba(0, 0, 0, 0.05);
  z-index: 2;
}
.welcome-1 picture {
  position: absolute;
  left: 25%;
  bottom: 1%;
  z-index: 1;
}
.welcome-2 ul li {
  padding: 0.5% 0;
  list-style-type: none;
  color: var(--primary-color);
  font-size: 95%;
}
.welcome-2 ul li:first-of-type {
  font-size: 120%;
}
.welcome-2 button {
  padding: 0.5% 0;
  background-color: var(--primary-color);
  color: var(--secondary-color);
  width: 50%;
  margin-left: 20%;
  margin-top: -1rem;
}
.reviews ul li{
  margin: 1% 0;
}
.upgrades-1 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 5%;
}
.upgrades-2 a {
  margin-left: 35%;
}
.upgrades-2 div {
background-color: var(--primary-color);
display: flex;
justify-content: center;
align-items: center;
padding: 2%;
margin: 2%;
min-height: 122px;
}
.invDetail-3 {
  display: flex;
  flex-direction: column;
  padding: 1%;
  margin-left: 1%;
  background-color: rgb(239, 217, 217);
}
.invDetail-3 span {
  padding: 1%;
}
footer {
  margin: 5% 2%;
}

/* LOGIN */
.login-container, .addClassfnContainer, .addInvContainer {
  background: white;
  padding: 2rem;
  border-radius: 8px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  text-align: center;
  width: 300px;
}
.form-group {
  margin-bottom: 1rem;
  text-align: left;
}
.form-group label {
  display: block;
  margin-bottom: 0.5rem;
  font-weight: bold;
}
.form-group input {
  width: 100%;
  padding: 0.5rem;
  border: 1px solid #ccc;
  border-radius: 4px;
}
.login-container button {
  background-color: #007BFF;
  color: white;
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 1rem;
}
.login-container button:hover {
  background-color: #0056b3;
}
.login-container a {
  display: block;
  margin-top: 1rem;
  color: #007BFF;
  text-decoration: none;
}
.login-container a:hover {
  text-decoration: underline;
}
.vehicleMgt, .selectClassification{
  display: flex;
  flex-direction: column;
}
.vehicleMgt a, .selectClassification *{
  margin: 1rem;
}
#classificationList {
  width: 300px;
}
td {
  width: 20%;
  padding: 1%;
}
.editInvContainer form, .deleteInvContainer form {
  width: 300px;
}


/* REGISTER */
.form-container {
  background-color: #ffffff;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  width: 300px;
}
.submit-btn {
  width: 100%;
  padding: 10px;
  background-color: #007bff;
  color: #ffffff;
  border: none;
  border-radius: 5px;
  font-size: 16px;
}
button {
  cursor: pointer;
}
.submit-btn:hover {
  background-color: #0056b3;
}
#classificationNameMsg {
  color: var(--primary-color);
}
textarea {
  width: 100%;
  height: 150px;
  padding: 12px 20px;
  box-sizing: border-box;
  border: 2px solid #ccc;
  border-radius: 4px;
  font-size: 16px;
  resize: none;
}
.accMgtContainer * {
  margin: 1rem
}

.account-update, .change-password {
  max-width: 500px;
  margin: 20px auto;
  padding: 20px;
  border: 1px solid #ddd;
  border-radius: 8px;
  background-color: #f9f9f9;
  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
}

.account-update form, .change-password form{
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.account-update label, .change-password label {
  font-weight: bold;
  margin-top: 10px;
}

.account-update input {
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
  font-size: 16px;
}

.change-password button, .account-update button {
  background-color: #007bff;
  color: white;
  padding: 10px;
  border: none;
  border-radius: 5px;
  font-size: 16px;
  cursor: pointer;
  margin-top: 10px;
}

.change-password button :hover, .account-update button :hover {
  background-color: #0056b3;
}

input[type="password"] {
  font-family: sans-serif;
  letter-spacing: 1px;
}

@media screen and (min-width: 768px) {
  h1 {
    margin: 1%;
  }
  nav {
    padding: 1%;
  }
 .welcome-1 picture {
  bottom: 90%;
  height: 40%;
  width: auto;
  left: 8%;
 }
 .welcome h2{
  margin-bottom: 5%;
 }
 .welcome-2 {
  width: 15%;
}
.reviews, .upgrades {
  margin-top: 13%;
}
.reviewUpgrade {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
#inv-display{
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}
.invDetail-1 {
  display: flex;
  justify-content: space-around;
  align-items: center;
}
.invDetail-2, .invDetail-3 {
  width: 50%;
}
}

